--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -37,6 +37,9 @@ jobs:
           distribution: 'zulu'
           java-version: 17
 
+      - uses: ./.github/actions/jemalloc-linux
+        id: cache-jemalloc
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
 
@@ -185,6 +188,9 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 17
+
+      - uses: ./.github/actions/jemalloc-linux
+        id: cache-jemalloc
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
